--- a/ts-pet-profiles/index.html
+++ b/ts-pet-profiles/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Pet Profiles</title>
 </head>
 <body>
-    Hello World!
-    <script src="app.js"></script>
+  <h1>Hello TS</h1>
+
+  <script type="module" src="./dist/script.js"></script>
 </body>
 </html>
